[package]
name = "investigation-rocket"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[dependencies]
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rocket_contrib = "0.2.0"

[dependencies.a4-proto]
git = "https://github.com/pgblrsgw/a4-proto"
rev = "5c4e3cb0211928cd9fea6475e0b096a31c494ace"

[dev-dependencies]
rocket = { version = "0.2.0", features = ["testing"] }
serde = "0.9"
serde_json = "0.9"